syntax = "proto3";

package systems.ajax.malov.internalapi.output.pubsub.stock;

import "systems/ajax/malov/commonproto/stock/big_decimal.proto";
import "google/protobuf/timestamp.proto";


option java_multiple_files = true;

message NotificationStockPrice {
  string stock_symbol_name = 1;
  commonproto.stock.BigDecimalProto price = 2;
  string user_id = 3;
  google.protobuf.Timestamp timestamp = 4;
}
